clusters/west-wa-phi-0010/bootstrap/heartbeat/webv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webv-heartbeat
  namespace: heartbeat
  labels:
    app.kubernetes.io/name: webv-heartbeat
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
  selector:
    matchLabels:
      app: webv-heartbeat
  template:
    metadata:
      labels:
        app: webv-heartbeat
    spec:
      containers:
        - name: app
          image: ghcr.io/cse-labs/pib-webv:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 10
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            failureThreshold: 60
            periodSeconds: 2
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          args:
          - --sleep
          - "1000"
          - --run-loop
          - --server
          - http://heartbeat:8080
          - --files
          - heartbeat-load.json
          - --zone
          - west-wa-phi-0010
          - --region
          - west
          - --log-format
          - Json

---
apiVersion: v1
kind: Service
metadata:
  name: webv-heartbeat
  namespace: heartbeat
  labels:
    app: webv-heartbeat
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: webv-heartbeat
